<resources>
    <string name="app_name">Washer&amp;Dry Management</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_left">88 mins</string>
    <string name="time_start">yesterday</string>
    <string name="machine_num">NO.1</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_id">User ID</string>
    <string name="tag">Help you to manage washer and dryer.</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="descripthon">Descripthon</string>
    <string name="machine_id">Machine ID</string>
    <string name="send_report">Send Report</string>

</resources>
