<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".ui.detail.ReportFragment"
    >

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/report_machineID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/machine_id"
        android:autofillHints="" />

    <EditText
        android:id="@+id/report_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripthon"
        android:inputType="text"
        android:gravity="bottom"
        android:autofillHints="" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">
        <Button
            android:id="@+id/report_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendReport"
            android:text="@string/send_report"/>
    </LinearLayout>


</LinearLayout>